--- a/application-dev.properties
+++ b/application-dev.properties
@@ -4,6 +4,8 @@
 proj.name=product-service
 server.id=4
 
+#security.basic.enabled=false 
+
 
 # ----------------------------------------
 # WEB PROPERTIES
@@ -15,3 +17,10 @@ server.port=7070
 
 ##If your terminal supports ANSI, color output will be used to aid readability. You can set spring.output.ansi.enabled value to either ALWAYS, NEVER or DETECT.
 spring.output.ansi.enabled=ALWAYS
+
+
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:20936/symplified
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/symplified
+spring.datasource.username=root
+spring.datasource.password=
