--- a/application.properties
+++ b/application.properties
@@ -4,14 +4,12 @@
 # Can also be set as a VM option -Dspring.profiles.active=dev
 spring.profiles.active=dev
 
+security.basic.enabled=false
+management.security.enabled=false
+
 
 build.version=@project.version@
 
 
-#spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:20936/symplified
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/symplified
-spring.datasource.username=root
-spring.datasource.password=
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
