--- a/application-prod.properties
+++ b/application-prod.properties
@@ -7,14 +7,13 @@
 # ----------------------------------------
 
 # EMBEDDED SERVER CONFIGURATION (ServerProperties)
-server.port=7070
+server.port=7071
 
 
 ##If your terminal supports ANSI, color output will be used to aid readability. You can set spring.output.ansi.enabled value to either ALWAYS, NEVER or DETECT.
 spring.output.ansi.enabled=ALWAYS
 
 #spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:20936/symplified
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/symplified
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:20936/symplified
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=KalsymSys@123987_
