--- a/pom.xml
+++ b/pom.xml
@@ -1,39 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.3.6.RELEASE</version>
+        <relativePath/>
     </parent>
     <groupId>com.kalsym</groupId>
     <artifactId>product-service</artifactId>
     <version>1.1-SNAPSHOT</version>
     <name>product-service</name>
     <description>Users authentication service</description>
+    
     <properties>
         <java.version>1.8</java.version>
     </properties>
   
     <dependencies>
+        <!--spring boot web-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <!--        <dependency>
-            <groupId>org.springframework.plugin</groupId>
-            <artifactId>spring-plugin-core</artifactId>
-            <version>2.0.0.RELEASE</version>
-        </dependency>-->
-<!--        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-rest</artifactId>
-        </dependency>-->
+        
         <!--spring boot security -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -67,16 +63,21 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
         
-        <!-- To add Getter, Setter annotations etc. -->
+        <!--json-->        
         <dependency>		    
             <groupId>org.projectlombok</groupId>		    
-            <artifactId>lombok</artifactId>		
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>		
         </dependency>
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>20180813</version>
             <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
         </dependency>
         
         <!--swagger-->
@@ -95,22 +96,7 @@
        
        
     </dependencies>
-    <!--    <repositories>
-        <repository>
-            <id>kalsym-internal-repository-group</id>
-            <name>Kalsym Internal Maven Repository Group</name>
-            <url>http://209.58.160.107/kalsym-repo/</url>
-            <layout>default</layout>
-            <releases>
-                <enabled>true</enabled>
-                <updatePolicy>never</updatePolicy>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-                <updatePolicy>never</updatePolicy>
-            </snapshots>
-        </repository>
-    </repositories>-->
+    
     <build>
         <plugins>
             <plugin>
@@ -144,15 +130,18 @@
                             </mainClass>
                         </manifest>
                     </archive>
+                    <include resource="logback.xml"/>
                 </configuration>
+                
             </plugin>
         </plugins>
         <resources>
             <resource>
                 <filtering>true</filtering>
-                <directory>src/main/resources</directory>
+                <directory>./</directory>
                 <includes>
                     <include>application.properties</include>
+                    <include resource="logback.xml"/>
                 </includes>
             </resource>
         </resources>
