--- a/application.properties
+++ b/application.properties
@@ -2,7 +2,7 @@
 # ACTIVE PROFILE
 # ----------------------------------------
 # Can also be set as a VM option -Dspring.profiles.active=dev
-spring.profiles.active=dev
+spring.profiles.active=prod
 
 security.basic.enabled=false
 management.security.enabled=false
