--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,8 @@
                 <directory>src/main/resources</directory>
                 <includes>
                     <include>application.properties</include>
+                    <include>application-dev.properties</include>
+                    <include>application-prod.properties</include>
                 </includes>
             </resource>
         </resources>
