--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,9 @@ build.version=@project.version@
 services.user-service.bulk_authorities.url = http://209.58.160.20:20921/authorities/bulk
 
 services.user-service.session_details = http://209.58.160.20:20921/sessions/details
+
+product.assets.url=https://symplified.biz/product-assets/
+product.assets.location=/var/www/html/symplified-assets/product-assets
+
+store.assets.url=https://symplified.biz/store-assets/
+store.assets.location=/var/www/html/symplified-assets/store-assets
