added sprcification for store product searching

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,9 @@ management.security.enabled=false
 build.version=@project.version@
 
 
-services.user-service.bulk_authorities.url = http://209.58.160.20:20921/authorities/bulk
+services.user-service.bulk_authorities.url = https://api.symplified.biz/user-service/v1/authorities/bulk
+services.user-service.session_details = https://api.symplified.biz/user-service/v1/sessions/details
 
-services.user-service.session_details = http://209.58.160.20:20921/sessions/details
 
 product.assets.url=https://symplified.biz/product-assets/
 product.assets.location=/var/www/html/symplified-assets/product-assets
