--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -23,4 +23,4 @@ spring.output.ansi.enabled=ALWAYS
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:20936/symplified
 #spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/symplified
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=KalsymSys@123987_
