--- a/pom.xml
+++ b/pom.xml
@@ -97,8 +97,12 @@
             <version>2.9.2</version>
             <scope>compile</scope>
         </dependency>
-       
-       
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webflux</artifactId>
+            <version>5.3.4</version>
+        </dependency>
+
     </dependencies>
     
     <build>
