--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,3 +1,24 @@
+# ----------------------------------------
+# ACTIVE PROFILE
+# ----------------------------------------
+# Can also be set as a VM option -Dspring.profiles.active=dev
+
+security.basic.enabled=false
+management.security.enabled=false
+
+
+build.version=@project.version@
+
+
+services.user-service.bulk_authorities.url = https://api.symplified.biz/user-service/v1/authorities/bulk
+services.user-service.session_details = https://api.symplified.biz/user-service/v1/sessions/details
+
+
+product.assets.url=https://symplified.biz/product-assets/
+product.assets.location=/var/www/html/symplified-assets/product-assets
+
+store.assets.url=https://symplified.biz/store-assets/
+store.assets.location=/var/www/html/symplified-assets/store-assets
 
 
 
