--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,19 +1,24 @@
+# this properties files should not contain sensitive information such as server ip, password
+# it should only contain the needed attribute for the application to run with default values
+# it's recomended to use 120.0.0.1 as default ip/url , and empty/dummy username and password
 
-#security.basic.enabled=true
-
-
-# ----------------------------------------
-# WEB PROPERTIES
-# ----------------------------------------
-
-# EMBEDDED SERVER CONFIGURATION (ServerProperties)
 server.port=7071
 
+# logging.config=logback.xml
 
-##If your terminal supports ANSI, color output will be used to aid readability. You can set spring.output.ansi.enabled value to either ALWAYS, NEVER or DETECT.
+security.basic.enabled=false
+management.security.enabled=false
+
+product.assets.url=http://127.0.0.1/product-assets/
+product.assets.location=/var/www/html/symplified-assets/product-assets
+
+store.assets.url=http://127.0.0.1/store-assets/
+store.assets.location=/var/www/html/symplified-assets/store-assets
+
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/symplified
+spring.datasource.username=root
+spring.datasource.password=
 spring.output.ansi.enabled=ALWAYS
 
-#spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:20936/symplified
-spring.datasource.username=root
-spring.datasource.password=KalsymSys@123987_
+services.user-service.bulk_authorities.url = https://api.symplified.biz/user-service/v1/authorities/bulk
+services.user-service.session_details = https://api.symplified.biz/user-service/v1/sessions/details
