--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,4 @@
-# ----------------------------------------
-# ACTIVE PROFILE
-# ----------------------------------------
-# Can also be set as a VM option -Dspring.profiles.active=dev
+# Default config (refrain from editting this config, please add in application-prod.properties below)
 spring.profiles.active=dev
-
-security.basic.enabled=false
-management.security.enabled=false
-
-
+proj.name=product-service
 build.version=@project.version@
-
-
-services.user-service.bulk_authorities.url = https://api.symplified.biz/user-service/v1/authorities/bulk
-services.user-service.session_details = https://api.symplified.biz/user-service/v1/sessions/details
-
-
-product.assets.url=https://symplified.biz/product-assets/
-product.assets.location=/var/www/html/symplified-assets/product-assets
-
-store.assets.url=https://symplified.biz/store-assets/
-store.assets.location=/var/www/html/symplified-assets/store-assets
