--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.profiles.active=dev
 security.basic.enabled=false
 management.security.enabled=false
 
+store.subdomain.config.allowed = false
+
 
 build.version=@project.version@
 
