search product functionality

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -22,5 +22,5 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.output.ansi.enabled=ALWAYS
 
-services.user-service.bulk_authorities.url = http://127.0.0.1:1201/user-service/v1/authorities/bulk
-services.user-service.session_details = http://127.0.0.1:1201/user-service/v1/sessions/details
+services.user-service.bulk_authorities.url=https://api.symplified.biz/user-service/v1/authorities/bulk
+services.user-service.session_details=https://api.symplified.biz/user-service/v1/sessions/details
