updated urls in store live chat

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -10,14 +10,14 @@ management.security.enabled=false
 build.version=@project.version@
 
 
-services.user-service.bulk_authorities.url = https://api.symplified.biz/user-service/v1/authorities/bulk
-services.user-service.session_details = https://api.symplified.biz/user-service/v1/sessions/details
+services.user-service.bulk_authorities.url = https://api.symplified.it/user-service/v1/authorities/bulk
+services.user-service.session_details = https://api.symplified.it/user-service/v1/sessions/details
 
 
-product.assets.url=https://symplified.biz/product-assets/
+product.assets.url=https://symplified.it/product-assets/
 product.assets.location=/var/www/html/symplified-assets/product-assets
 
-store.assets.url=https://symplified.biz/store-assets/
+store.assets.url=https://symplified.it/store-assets/
 store.assets.location=/var/www/html/symplified-assets/store-assets
 
 
