--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 # Default config (refrain from editting this config, please add in application-prod.properties below)
-spring.profiles.active=prod
+spring.profiles.active=dev
 proj.name=product-service
-build.version=@project.version@
+build.version=@project.version@        
