properties and update endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,10 @@
 spring.profiles.active=dev
 proj.name=product-service
 build.version=@project.version@        
+
+livechat.store.agent.creation.url=https://live.symplified.biz/api/v1/groups.create
+livechat.store.agent.deletion.url=https://live.symplified.biz/api/v1/groups.delete
+livechat.store.agent.invitation.url=https://live.symplified.biz/api/v1/groups.invite
+liveChat.login.url=https://live.symplified.biz/api/v1/login
+liveChatlogin.username=order
+liveChat.login.password=sarosh@1234
