default values im store commission

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ livechat.store.agent.invitation.url=https://live.symplified.biz/api/v1/groups.in
 liveChat.login.url=https://live.symplified.biz/api/v1/login
 liveChatlogin.username=order
 liveChat.login.password=sarosh@1234
+
+storeCommission.rate=3.5
+storeCommission.minChargeAmount=1.5
