--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -42,6 +42,6 @@ spring.output.ansi.enabled=ALWAYS
 
 #spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:20936/symplified
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/symplified
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/symplified?serverTimezone=Asia/Kuala_Lumpur
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=admin
