add default value for logo & banner during update store asset

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -20,7 +20,9 @@ product.assets.location=/var/www/html/symplified-assets/product-assets
 store.assets.url=https://symplified.biz/store-assets/
 store.assets.location=/var/www/html/symplified-assets/store-assets
 
-
+store.logo.default.url=https://symplified.biz/store-assets/logo_symplified_bg.png
+store.banner.ecommerce.default.url=https://symplified.biz/store-assets/banner-fnb.png
+store.banner.fnb.default.url=https://symplified.biz/store-assets/banner-ecomm.jpeg
 
 proj.name=product-service
 server.id=4
