update to version 3.2.32

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ liveChat.login.password=sarosh@1234
 
 storeCommission.rate=3.5
 storeCommission.minChargeAmount=1.5
+
+whatsapp.service.push.url=https://waw.symplified.it/360dialog/callback/templatemessage/push
