--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -47,3 +47,5 @@ spring.output.ansi.enabled=ALWAYS
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/symplified?serverTimezone=Asia/Kuala_Lumpur
 spring.datasource.username=root
 spring.datasource.password=admin
+
+merchant.default.password=kalsym@123
