--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -49,3 +49,9 @@ spring.datasource.username=root
 spring.datasource.password=admin
 
 merchant.default.password=kalsym@123
+
+#for domain creation
+store.subdomain.config.allowed = true
+store.subdomain.creation.url = https://api.godaddy.com/v1/domains/<base-domain>/records/CNAME
+store.subdomain.token = not-set
+store.subdomain.config.path:/etc/nginx/conf.d/var
