update store description length

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,6 @@ liveChat.login.password=sarosh@1234
 
 storeCommission.rate=3.5
 storeCommission.minChargeAmount=1.5
+store.description.length=300
 
 whatsapp.service.push.url=https://waw.symplified.it/360dialog/callback/templatemessage/push
