update new features. refer to release notes 3.2.42

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -55,3 +55,6 @@ store.subdomain.config.allowed = true
 store.subdomain.creation.url = https://api.godaddy.com/v1/domains/<base-domain>/records/CNAME
 store.subdomain.token = not-set
 store.subdomain.config.path:/etc/nginx/conf.d/var
+
+
+logging.level.org.hibernate.SQL=DEBUG
