--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,17 @@
             <scope>compile</scope>
         </dependency>
        
+       <!--zxing qrcode!-->
+       <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>core</artifactId>
+            <version>3.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>javase</artifactId>
+            <version>3.3.0</version>
+        </dependency>
        
     </dependencies>
     
