--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -56,5 +56,6 @@ store.subdomain.creation.url = https://api.godaddy.com/v1/domains/<base-domain>/
 store.subdomain.token = not-set
 store.subdomain.config.path:/etc/nginx/conf.d/var
 
+deliveryService.createcentercode.URL=https://api.symplified.it/delivery-service/v1/deliveryEvent/createCentreCode/<storeId>
 
 logging.level.org.hibernate.SQL=DEBUG
