--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -24,3 +24,6 @@ spring.output.ansi.enabled=ALWAYS
 
 services.user-service.bulk_authorities.url=https://api.symplified.biz/user-service/v1/authorities/bulk
 services.user-service.session_details=https://api.symplified.biz/user-service/v1/sessions/details
+
+deliveryService.createcentercode.URL=https://api.symplified.it/delivery-service/v1/deliveryEvent/createCentreCode/<storeId>
+
