--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -59,3 +59,6 @@ store.subdomain.config.path:/etc/nginx/conf.d/var
 deliveryService.createcentercode.URL=https://api.symplified.it/delivery-service/v1/deliveryEvent/createCentreCode/<storeId>
 
 logging.level.org.hibernate.SQL=DEBUG
+
+#configurable asset service url
+asset.service.url = https://assets.symplified.it
