--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -35,7 +35,7 @@ server.id=4
 # ----------------------------------------
 
 # EMBEDDED SERVER CONFIGURATION (ServerProperties)
-server.port=7071
+server.port=4000
 
 
 ##If your terminal supports ANSI, color output will be used to aid readability. You can set spring.output.ansi.enabled value to either ALWAYS, NEVER or DETECT.
@@ -44,9 +44,10 @@ spring.output.ansi.enabled=ALWAYS
 
 #spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:20936/symplified
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/symplified?serverTimezone=Asia/Kuala_Lumpur
+spring.datasource.url=jdbc:mysql://localhost:3340/symplified?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=kalsym@123
+server.port=4000
 
 merchant.default.password=kalsym@123
 
