--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -63,3 +63,5 @@ logging.level.org.hibernate.SQL=DEBUG
 
 #configurable asset service url
 asset.service.url = https://assets.symplified.it
+
+marketplace.url = https://dev-my.symplified.ai
