--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,4 @@ storeCommission.rate=3.5
 storeCommission.minChargeAmount=1.5
 store.description.length=300
 
-whatsapp.service.push.url=https://waw.symplified.it/360dialog/callback/templatemessage/push
+whatsapp.service.push.url=https://api.symplified.it/whatsapp-java-service/v1/templatemessage/push
