--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -65,3 +65,5 @@ logging.level.org.hibernate.SQL=DEBUG
 asset.service.url = https://assets.symplified.it
 
 marketplace.url = https://dev-my.symplified.ai
+
+path.main.sitemapxml = C:/Users/Nur Iman/Desktop/Projects/java/product-service/src/main/resources/static/sitemap.xml
