--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -66,4 +66,8 @@ asset.service.url = https://assets.symplified.it
 
 marketplace.url = https://dev-my.symplified.ai
 
-path.main.sitemapxml = C:/Users/Nur Iman/Desktop/Projects/java/product-service/src/main/resources/static/sitemap.xml
+# path.main.sitemapxml = C:/Users/Nur Iman/Desktop/Projects/java/product-service/src/main/resources/static/sitemap.xml
+path.main.sitemapxml = C:/Users/Nur Iman/Desktop/Projects/java/product-service/src/main/resources/static
+
+protocol.subdomain = http://localhost:4000
+server.servlet.context-path=
