--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -47,6 +47,7 @@ spring.output.ansi.enabled=ALWAYS
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/symplified?serverTimezone=Asia/Kuala_Lumpur
 spring.datasource.username=root
 spring.datasource.password=admin
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 merchant.default.password=kalsym@123
 
