--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.kalsym</groupId>
     <artifactId>product-service</artifactId>
-    <version>3.10.36-HOTFIX</version>
+    <version>3.10.36-SNAPSHOT</version>
     <name>product-service</name>
     <description>Product service</description>
     
