--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -10,19 +10,19 @@ management.security.enabled=false
 build.version=@project.version@
 
 
-services.user-service.bulk_authorities.url = https://api.symplified.it/user-service/v1/authorities/bulk
-services.user-service.session_details = https://api.symplified.it/user-service/v1/sessions/details
+services.user-service.bulk_authorities.url = https://backend.lawat.la/user-service/authorities/bulk
+services.user-service.session_details = https://backend.lawat.la/user-service/sessions/details
 
 
-product.assets.url=https://symplified.biz/product-assets/
-product.assets.location=/var/www/html/symplified-assets/product-assets
+product.assets.url=https://backend.lawat.la/asset-service/product-assets/
+product.assets.location=/var/www/html/symplified/admin/storage/assets/product-assets
 
-store.assets.url=https://symplified.biz/store-assets/
-store.assets.location=/var/www/html/symplified-assets/store-assets
+store.assets.url=https://backend.lawat.la/asset-service/store-assets/
+store.assets.location=/var/www/html/symplified/admin/storage/assets/store-assets
 
-store.logo.default.url=https://symplified.biz/store-assets/logo_symplified_bg.png
-store.banner.ecommerce.default.url=https://symplified.biz/store-assets/banner-fnb.png
-store.banner.fnb.default.url=https://symplified.biz/store-assets/banner-ecomm.jpeg
+store.logo.default.url=https://backend.lawat.la/asset-service/store-assets/logo_symplified_bg.png
+store.banner.ecommerce.default.url=https://backend.lawat.la/asset-service/store-assets/banner-fnb.png
+store.banner.fnb.default.url=https://backend.lawat.la/asset-service/store-assets/banner-fnb.png
 
 proj.name=product-service
 server.id=4
@@ -44,9 +44,9 @@ spring.output.ansi.enabled=ALWAYS
 
 #spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:20936/symplified
-spring.datasource.url=jdbc:mysql://localhost:3346/symplified?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.url=jdbc:mysql://localhost:9970/symplified_staging?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
-spring.datasource.password=kalsym@123
+spring.datasource.password=
 
 merchant.default.password=kalsym@123
 
@@ -56,12 +56,12 @@ store.subdomain.creation.url = https://api.godaddy.com/v1/domains/<base-domain>/
 store.subdomain.token = not-set
 store.subdomain.config.path:/etc/nginx/conf.d/var
 
-deliveryService.createcentercode.URL=https://api.symplified.it/delivery-service/v1/deliveryEvent/createCentreCode/<storeId>
+deliveryService.createcentercode.URL=https://backend.lawat.la/delivery-service/deliveryEvent/createCentreCode/<storeId>
 
 logging.level.org.hibernate.SQL=DEBUG
 
 #configurable asset service url
-asset.service.url = https://assets.symplified.it
+asset.service.url = https://backend.lawat.la/asset-service
 
 marketplace.url = https://dev-my.symplified.ai
 
