--- a/pom.xml
+++ b/pom.xml
@@ -114,7 +114,12 @@
             <artifactId>javase</artifactId>
             <version>3.3.0</version>
         </dependency>
-       
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+
     </dependencies>
     
     <build>
