--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,29 +1,68 @@
-# this properties files should not contain sensitive information such as server ip, password
-# it should only contain the needed attribute for the application to run with default values
-# it's recomended to use 120.0.0.1 as default ip/url , and empty/dummy username and password
-
-server.port=8001
-
-# logging.config=logback.xml
+# ----------------------------------------
+# ACTIVE PROFILE
+# ----------------------------------------
+# Can also be set as a VM option -Dspring.profiles.active=dev
 
 security.basic.enabled=false
 management.security.enabled=false
 
-product.assets.url=http://127.0.0.1/product-assets/
-product.assets.location=/var/www/html/symplified-assets/product-assets
 
-store.subdomain.config.allowed = false
+build.version=@project.version@
 
-store.assets.url=http://127.0.0.1/store-assets/
-store.assets.location=/var/www/html/symplified-assets/store-assets
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/symplified
-spring.datasource.username=root
-spring.datasource.password=
+services.user-service.bulk_authorities.url = https://api.e-kedai.my/user-service/authorities/bulk
+services.user-service.session_details = https://api.e-kedai.my/user-service/sessions/details
+
+
+product.assets.url=https://api.e-kedai.my/asset-service/product-assets/
+product.assets.location=/var/www/html/symplified/admin/storage/assets/product-assets
+
+store.assets.url=https://api.e-kedai.my/asset-service/store-assets/
+store.assets.location=/var/www/html/symplified/admin/storage/assets/store-assets
+
+store.logo.default.url=https://api.e-kedai.my/asset-service/store-assets/logo_symplified_bg.png
+store.banner.ecommerce.default.url=https://api.e-kedai.my/asset-service/store-assets/banner-fnb.png
+store.banner.fnb.default.url=https://api.e-kedai.my/asset-service/store-assets/banner-fnb.png
+
+proj.name=product-service
+server.id=4
+
+#security.basic.enabled=false
+
+
+# ----------------------------------------
+# WEB PROPERTIES
+# ----------------------------------------
+
+# EMBEDDED SERVER CONFIGURATION (ServerProperties)
+server.port=4000
+
+
+##If your terminal supports ANSI, color output will be used to aid readability. You can set spring.output.ansi.enabled value to either ALWAYS, NEVER or DETECT.
 spring.output.ansi.enabled=ALWAYS
 
-services.user-service.bulk_authorities.url=https://api.symplified.biz/user-service/v1/authorities/bulk
-services.user-service.session_details=https://api.symplified.biz/user-service/v1/sessions/details
 
-deliveryService.createcentercode.URL=https://api.symplified.it/delivery-service/v1/deliveryEvent/createCentreCode/<storeId>
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:20936/symplified
+spring.datasource.url=jdbc:mysql://localhost:9970/symplified?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=
 
+merchant.default.password=kalsym@123
+
+#for domain creation
+store.subdomain.config.allowed = true
+store.subdomain.creation.url = https://api.godaddy.com/v1/domains/<base-domain>/records/CNAME
+store.subdomain.token = not-set
+store.subdomain.config.path:/etc/nginx/conf.d/var
+
+deliveryService.createcentercode.URL=https://api.e-kedai.my/delivery-service/deliveryEvent/createCentreCode/<storeId>
+
+logging.level.org.hibernate.SQL=DEBUG
+
+#configurable asset service url
+asset.service.url = https://api.e-kedai.my/asset-service
+
+marketplace.url = https://dev-my.symplified.ai
+
+path.main.sitemapxml = C:/Users/Nur Iman/Desktop/Projects/java/product-service/src/main/resources/static/sitemap.xml
