--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,18 @@
             <version>2.9.0</version>
         </dependency>
 
+        <!-- excel export-->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>5.2.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>5.2.5</version> 
+        </dependency>
+
     </dependencies>
     
     <build>
